# RAGEvaluation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agenticrag/: app.py  llm.py  rag.py  rag_evaluation.ipynb  retriever.py
